fix deleting too much stuff

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,7 +53,7 @@ textarea {
     margin-top:20px;
   }
   @media(max-width: 767px){
-    margin-top:160px;
+    margin-top:20px;
   }
   
   width: 100%;
