--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -52,7 +52,7 @@
   -webkit-box-shadow: 0 4px 8px 4px rgba(0,0,0,0.25);
   box-shadow: 0 4px 8px 4px rgba(0,0,0,0.25);
   margin: 0 auto;
-  margin-top:100px;
+  overflow-x:auto;
   max-width:300px;
   width:90%;
   margin-bottom:10px;
